# Spel-

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  luatest.cpp  main.cpp  thingy.cpp
Bus/: EventBuss.cpp  EventBuss.h  EventHandler.h  Events.h  GameEvents.h
Entities/: Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  Projectile.cpp  Projectile.h
Entities/Managers/: Draw.cpp  Draw.h  EntityManager.cpp  EntityManager.h  GameEngineAPI.cpp  GameEngineAPI.h  ProjectileManager.cpp  ProjectileManager.h
Entities/Managers/Collision/: CollisionManager.cpp  CollisionManager.h
Entities/Managers/CombatSystem/: SpellHandler.cpp  SpellHandler.h
Entities/Projectiles/: Projectiles.h  targetProjectile.cpp  targetProjectile.h
LoadGame/: loadSpells.cpp  loadSpells.h
Map/: GameMap.cpp  GameMap.h  Map.cpp  Map.h
Player/: Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h
Spells/Effects/: Debuffs.cpp  Debuffs.h
Spells/SpellManager/: SpellManager.cpp  SpellManager.h
Spells/Spells/: BaseSpell.cpp  BaseSpell.h  Spells.h
Spells/Spells/allSpells/: spellOne.cpp  spellOne.h
data/: Ablities.json  Player.json  test.lua
